--- a/index.css
+++ b/index.css
@@ -220,8 +220,8 @@ h2 {
 }
 
 .form-sugestao textarea {
-  resize: vertical;
-  min-height: 100px;
+  resize: none;
+  height: 100px;
 }
 
 .form-sugestao fieldset {
